Actions
Bug #12557
closedtod: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../sun4/io/tod.c: In function 'tod_attach': ../../sun4/io/tod.c:195: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Related issues
Updated by Toomas Soome almost 2 years ago
- Related to Bug #12814: CCVERBOSE flag in CFLAGS is redundant and not needed added
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 35f318d5eb4055114a1be5b52b03efe211e014db
commit 35f318d5eb4055114a1be5b52b03efe211e014db Author: Toomas Soome <tsoome@me.com> Date: 2020-06-05T20:29:37.000Z 12557 tod: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions