12557 tod: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>